--- a/indico/web/client/styles/legacy/Conf_Basic.scss
+++ b/indico/web/client/styles/legacy/Conf_Basic.scss
@@ -40,6 +40,11 @@
   background: transparent none repeat scroll 0 0;
 }
 
+.confLogoBannerBox img {
+  width: 100%;
+  margin-bottom: 0.5rem;
+}
+
 .confTitleBox {
   color: white;
   min-height: 90px;
